--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1612,10 +1612,12 @@ button,
   padding-top: 2em; 
   visibility: visible;
   opacity: 1;
-  max-height: 1000px;}
+  max-height: 1000px;
+}
   .mini-posts article .image {
     display: block;
-    margin: 0 0 1.5em 0; }
+    margin: 0 0 1.5em 0;
+   }
     .mini-posts article .image img {
       display: block;
       width: 100%; }
@@ -1965,11 +1967,14 @@ button,
   #sidebar > .inner {
     padding: 2.22222em 2.22222em 2.44444em 2.22222em ;
     position: relative;
-    width: 26em; }
+    width: 26em;
+     }
     #sidebar > .inner > * {
       border-bottom: solid 2px rgba(210, 215, 217, 0.75);
       margin: 0 0 3.5em 0;
-      padding: 0 0 3.5em 0; }
+      padding: 0 0 3.5em 0;
+   
+   }
       #sidebar > .inner > * > :last-child {
         margin-bottom: 0; }
       #sidebar > .inner > *:last-child {
@@ -2036,7 +2041,8 @@ button,
         #sidebar > .inner > .alt {
           margin: -1.66667em 0 3.33333em -1.66667em;
           padding: 1.66667em;
-          width: calc(100% + 3.33333em); }
+          width: calc(100% + 3.33333em);
+         }
       #sidebar .toggle {
         height: 6.25em;
         left: 24em;
